need to finish the map by name part!!!!!

--- a/MappingObjectsFramework.csproj
+++ b/MappingObjectsFramework.csproj
@@ -52,6 +52,7 @@
     <Compile Include="src\Services\StandartConverterResolver.cs" />
     <Compile Include="src\Helpers\NameMap.cs" />
     <Compile Include="src\Helpers\MappingHelper.cs" />
+    <Compile Include="src\Helpers\MappingNameResolver.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
